app/common.app.css
.header-top {
    margin:.5em 0 0 0;
}

.header-bottom {
    margin:0 0 .5em 0;
    border-bottom:3px solid #333;
}

.reservations-count {
    font-size:1.5em;
}

@media all and (max-width: 660px) {
    .header-bottom a.action-button, .toolbar a.action-button {
        display:block;
        width:100%;
        margin:.2em;
    }
}

.toolbar {
    display:none;
    position:fixed;
    top:0;
    left:0;
    right:0;
    padding:0 .5em .5em .5em;
    background:#fff;
    border-bottom:3px solid #333;
}

@media all and (max-width: 1024px) {
    .toolbar {
        display:block;
    }
    .header-top, .header-bottom {
        display:none;
    }
    body {
        margin-top:6em;
    }
}

.toolbar.visible {
    display:block;
}

.toolbar .reservations-count {
    float:left;
}

.mobile-toggle-button {
    display:none;
}

@media all and (min-width: 661px) {
    .toolbar .buttons {
        float:right;
    }
}

@media all and (max-width: 660px) {
    .toolbar .buttons {
        clear:both;
        display:none;
    }

    .toolbar .buttons-visible {
        display:block;
    }

    .mobile-toggle-button {
        display:block;
        float:right;
        padding:0 .2em 0 .2em;
        width:1.3em;
        font-size:2em;
        line-height:1em;
    }
}

.cc-payment-title {
    font-size:1.3em;
}
.checkout-form {
    margin-top:2em;
}

.summary {
    margin-top:2em;
}

